<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button">Кнопка</string>
    <string name="button_1">Кнопка 1</string>
    <string name="button_2">Кнопка 2</string>
    <string name="button_3">Кнопка 3</string>
    <string name="hello_blank_fragment">Hello blank fragment 2</string>

</resources>
